--- a/2_exploration.Rmd
+++ b/2_exploration.Rmd
@@ -25,24 +25,22 @@ library(glue)
 
 lyrics <- readRDS("./1_lyrics.Rds")
 lyrics_lines <- readRDS("./1_lyrics_lines.Rds")
-
-palette <- c("cool_gray" = "#3B3730", "sage" = "#9D9480", "nude" = "#8C7460")
 ```
 
 This exploration of the lyrics is to get acquainted with the data set and perform any transformations that will likely be useful in subsequent analysis.
 
-## Summary Statistics
+## Songs Counts
 
-
+Early Rush albums had fewer songs, and were produced every year or two. The last three albums were separated by about five years.
 
 ```{r}
 lyrics %>% 
   count(released, album) %>%
   mutate(released = if_else(album == "Fly by Night", as.integer(1974), released)) %>%
   ggplot(aes(x = released, y = n)) +
-  geom_col(fill = "firebrick") +
+  geom_col(fill = "lightgoldenrod") +
   geom_text(aes(label = album, y = 0.5), angle = 90, hjust = "bottom", vjust = .25, 
-            size = 3, color = "gray99") +
+            size = 3, color = "lightgoldenrod4") +
   scale_x_continuous(limits = c(1970, 2015), 
                      breaks = seq(1970, 2015, by = 5), 
                      minor_breaks = 1970:2015, 
@@ -51,59 +49,105 @@ lyrics %>%
   theme(
     axis.text.x = element_text(angle = 90, vjust = 0.5)
   ) +
-  labs(x = "Release Year", y = "Songs on Album", 
+  labs(x = "Released", y = "Songs on Album", 
        title = glue("Neil Peart authored lyrics to {nrow(lyrics)} songs across {n_distinct(lyrics$album)} albums."),
        subtitle = "Song Counts")
 ```
 
-## Text Complexity
-
-Have Rush songs changed in _complexity_ over time? I Googled "measuring text complexity" to see how I might characterize songs. [Lexile](https://lexile.com/educators/tools-to-support-reading-at-school/tools-to-determine-a-books-complexity/) has an algorithm that measures text complexity for educators. Lexile doesn't disclose their algorithm, but they do give some direction about how to think about complexity. Their measure of complexity increases with sentence length and decreases with word frequency. 
-
-"Sentence length" is a tricky concept for song lyrics since they mostly exclude punctuation. The next best alternative may be to measure the length of the entire song. We can also divide the text into common (so-called "stop words") and complex words and count each type. A song with a high proportion of complex words could receive a higher complexity score. A variation that measures the proportion of distinct words that are complex might prove useful to mitigate the effect of repetitive choruses.
+# Line Counts
 
 ```{r}
-lyrics
+lyrics_1 <- lyrics %>%
+  inner_join(lyrics_lines %>% count(song_id, name = "n_lines"), by = "song_id")
+
+lc_quant <- quantile(lyrics_1$n_lines)
 ```
 
-
-The average song^[Good tutorial on **ggplotly** [here](https://www.musgraveanalytics.com/blog/2018/8/24/how-to-make-ggplot2-charts-interactive-with-plotly).].
+The IQR of lines per song was `r lc_quant["25%"]` to `r lc_quant["75%"]` lines. The shortest song was `r lyrics_1 %>% slice_min(order_by = n_lines) %>% pull(song)` (`r min(lyrics_1$n_lines)` lines). The longest was `r lyrics_1 %>% slice_max(order_by = n_lines) %>% pull(song)` (`r max(lyrics_1$n_lines)` lines).
 
 ```{r}
-song_word_counts <- lyrics %>% 
-  unnest_tokens(output = "word", input = "lyrics", token = "words") %>%
-  count(song_id, word) %>%
-  group_by(song_id) %>%
-  summarize(word_count = sum(n))
-
-lyrics_aug_0 <- lyrics %>%
-  inner_join(song_word_counts, by = "song_id")
-
-p <- lyrics_aug_0 %>% 
-  ggplot(aes(x = released, y = word_count, group = 1,
-             text = glue("{song} ({song_id})<br>",
-                         "Album: {album}<br>",
-                         "Released: {released}<br>",
-                         "Words: {word_count}"))) +
-  geom_point(color = "firebrick4") +
-  geom_smooth(method = "lm", formula = "y ~ x", color = "goldenrod", fill = "goldenrod") +
-  labs(y = "Words in Song", x = "Release Year", 
-       title = "Word counts in songs were consistent over time.",
-       subtitle = "Linear trend line has zero slope.") +
-  theme_light()
+p <- lyrics_1 %>% 
+  ggplot(aes(x = released, y = n_lines, group = as.factor(released),
+             text = glue("{song} ({album})<br>",
+                         "Lines: {n_lines}"))) +
+  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
+  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
+  theme_light() +
+  labs(
+    x = "Released", y = "Line Count",
+    title = glue("Songs usually vary between {lc_quant['25%']} and {lc_quant['75%']} lines.")
+  )
 
 ggplotly(p, tooltip = "text")
 ```
 
-## Lexicon
+# Word Counts
 
-Did Rush songs become 
+The **tidytext** package will split the text into "tokens" (words). Let's count words.
+
 ```{r}
-lyrics %>% 
+word_count <- lyrics %>% 
   unnest_tokens(output = "word", input = "lyrics", token = "words") %>%
-  anti_join(stop_words, by = "word") %>%
-  count(album, word) %>%
-  group_by(album) %>%
-  slice_max(order_by = n, n = 5, with_ties = FALSE)
+  count(song_id, name = "n_words")
+
+lyrics_2 <- lyrics_1 %>%
+  inner_join(word_count, by = "song_id")
+
+wc_quant <- quantile(lyrics_2$n_words)
 ```
 
+The IQR of words per song was `r wc_quant["25%"]` to `r wc_quant["75%"]` words. The shortest song was `r lyrics_2 %>% slice_min(order_by = n_words) %>% pull(song)` (`r min(lyrics_2$n_words)` words). The longest were `r lyrics_2 %>% slice_max(order_by = n_words) %>% pull(song) %>% .[1]` and `r lyrics_2 %>% slice_max(order_by = n_words) %>% pull(song) %>% .[2]` at (`r max(lyrics_2$n_words)` words).
+
+```{r}
+p <- lyrics_2 %>% 
+  ggplot(aes(x = released, y = n_words, group = as.factor(released),
+             text = glue("{song} ({album})<br>",
+                         "Lines: {n_lines}<br>",
+                         "Words: {n_words}"))) +
+  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
+  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
+  theme_light() +
+  labs(
+    x = "Released", y = "Word Count",
+    title = glue("Songs usually vary between {wc_quant['25%']} and {wc_quant['75%']} words.")
+  )
+
+ggplotly(p, tooltip = "text")
+```
+
+## Character Counts
+
+An easy to calculate measure measure of song length is the string length of the entire song. Let's see the distribution.
+
+```{r}
+lyrics_3 <- lyrics_2 %>%
+  mutate(n_chars = map_int(lyrics, str_length))
+
+cc_quant <- quantile(lyrics_3$n_chars)
+```
+
+The IQR of song lengths was `r quantile(lyrics_3$n_chars)["25%"]` to `r quantile(lyrics_3$n_chars)["75%"]` characters. The shortest songs were `r lyrics_3 %>% slice_min(order_by = n_chars) %>% pull(song) %>% .[1]` and `r lyrics_3 %>% slice_min(order_by = n_chars) %>% pull(song) %>% .[2]`, both at `r min(lyrics_3$n_chars)` characters. The longest song was `r lyrics_3 %>% slice_max(order_by = n_chars) %>% pull(song)` (`r max(lyrics_3$n_chars)` characters).
+
+```{r}
+p <- lyrics_3 %>% 
+  ggplot(aes(x = released, y = n_chars, group = as.factor(released),
+             text = glue("{song} ({album})<br>",
+                         "Chars: {n_chars}"))) +
+  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
+  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
+  theme_light() +
+  labs(
+    x = "Released", y = "Character Count",
+    title = glue("Songs usually vary between {cc_quant['25%']} and {cc_quant['75%']} characters.")
+  )
+
+ggplotly(p, tooltip = "text")
+```
+
+## Save Work
+
+Save the lyrics with summary stats for subsequent steps.
+
+```{r}
+saveRDS(lyrics_3, "./2_lyrics.Rds")
+```
