--- a/2_exploration.Rmd
+++ b/2_exploration.Rmd
@@ -6,11 +6,11 @@ date: "`r Sys.Date()`"
 output: 
   html_document:
     css: "style.css"
-    theme: flatly
+    theme: jekyll-theme-minimal
     toc: true
     toc_float: true
     highlight: haddock
-    code_folding: hide
+    code_folding: show
 ---
 
 ```{r setup, include=FALSE}
